--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "components/Contact.jsx",
   ],
   "exclude": [
     "node_modules"
