--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "components/Contact.jsx",
+    "components/ContactProducts.jsx",
   ],
   "exclude": [
     "node_modules"
