--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
     "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
+    "@types/react": "^18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "framer-motion": "^10.12.18",
