--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.12.18",
     "leaflet": "^1.9.4",
     "next": "13.4.9",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
+    "@types/nodemailer": "^6.4.9",
     "@types/react-slick": "^0.23.10"
   }
 }
