--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "postcss": "8.4.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-slick": "^0.29.0",
